2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.mdp, src/Makefile.am: Add new files.
	* src/Defines.cs: Keep Defines.cs in sync.  Should do this better,
	  though, but I'm tired.
	* src/Application.cs, src/GnomeApplication.cs: Typo fix.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.sln, tasque.csproj: Visual Studio 2008 solution for building
	  Tasque with the Dummy and RTM backends.
	* src/Application.cs, src/NativeApplication.cs, src/GnomeApplication.cs,
	  src/WindowsApplication.cs: Platform-specific app management code.
	* src/Logger.cs: Some ugly (temporary) #if WIN32 lines.
	* src/Defines.cs.in: Rename GnomeLocaleDir to LocaleDir.
	* src/Defines.cs: Commit a copy for building on Windows.
	* src/Preferences.cs: Pick conf file in platform-independent way.
	* src/Utilities.cs: Process-renaming code moved to src/GnomeApplication.cs.
	* winbin/: Mono assemblies needed on Windows.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Handle null backend the same as unconfigured
	  backend.  Whitespace fixes.
	* src/Backends/Rtm/RtmTask.cs, src/Backends/Rtm/RtmBackend.cs: Null
	  reference checks based on some errors I saw while running in
	  Windows.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Make line endings consistent.

2008-09-21  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: If there's a valid backend that fails to
	  authenticate, retry instead of just showing the preferences window.
	   Fixes bug #538019, patch courtesy of Joseph Method and Andrew
	  Conkling.
	* src/Backends/Rtm/RtmBackend.cs: More informative exception handling
	  during authentication.

2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Don't paint the background of the status bar white
	  (it was overriding theme colors).  Partial fix for bug #532766,
	  patch courtesy of Mark A. Nicolosi.
